updated test and queries
